# dirgrab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml
dirgrab/: Cargo.toml  README.md
dirgrab-lib/: Cargo.toml  README.md
dirgrab-lib/src/: config.rs  errors.rs  lib.rs  listing.rs  processing.rs  tree.rs  utils.rs
dirgrab/src/: config_loader.rs  main.rs
planning/: plan.md  review.md  review2.md
