[workspace]
members = [
    "dirgrab",      # The binary crate
    "dirgrab-lib",  # The library crate
]
resolver = "2" # Use the modern feature resolver

[workspace.package]
version = "0.4.0"
authors = ["Riley Leff <rileyleff@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rileyleff/dirgrab"
description = "CLI and library to concatenate directory contents using Git context."
readme = "README.md"
keywords = ["cli", "git", "clipboard", "concatenate", "files"]
categories = ["command-line-utilities", "development-tools::build-utils"]
