[package]
name = "dirgrab-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for dirgrab: concatenates file contents from directories, respecting Git context."
readme = "../README.md"

[dependencies]
ignore = "0.4.23"
log = "0.4.27"
thiserror = "2.0.12"
walkdir = "2.5.0"
pdf-extract = "0.8.2"

[dev-dependencies]
tempfile = "3.10"
anyhow = "1.0.97"
